--- a/src/container/Navbar/Navbar.css
+++ b/src/container/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    background-color: rgba(237, 237, 237, 1);
+    background-color: #EDEDED;
     padding: 1rem 7rem;
 }
 
@@ -13,13 +13,13 @@
 }
 
 .app_Navbar-logo img{
-    width: 112.28px;
+    width: 70px;
     padding: 0 1rem;
     cursor: pointer;
 }
 
 .app_Navbar-logo h1{
-    font-size: 45px;
+    font-size: 30px;
     color: #171A1F;
     cursor: pointer;
 }
