--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -2,7 +2,7 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15.8rem 15rem;
+    padding: 7.8rem 15rem;
     background-color: #CFD9F4;
 }
 
@@ -39,4 +39,9 @@
 
 .app_header-img{
     width: 30%;
+}
+
+.space{
+    padding-bottom: 18rem;
+    background-color: rgba(243, 228, 228, 0.944);
 }
