--- a/src/container/Navbar/Navbar.css
+++ b/src/container/Navbar/Navbar.css
@@ -49,6 +49,7 @@ list-style: none;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-right: 5px;
 }
 
 .app_Navbar-signup{
