--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,11 +1,16 @@
 .app_header{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 7.8rem 15rem;
     background-color: #CFD9F4;
     color:#171A1F;
     z-index: 5;
+}
+
+.app_header-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 75vh;
+    gap: 50px;
 }
 
 .app_header-info{
@@ -21,12 +26,12 @@
 
     margin: 0;
     line-height: 50px;
-    font-size: 55px;
+    font-size: 60px;
 }
 
 .app_header-info p{
     padding-bottom: 40px;
-    font-size: 20px;
+    font-size: 21px;
 }
 
 .started-btn{
@@ -39,8 +44,9 @@
     cursor: pointer;
 }
 
-.app_header-img{
-    width: 30%;
+.app_header-img img{
+    width: 100%;
+    height: 100%;
 }
 
 .space{
