--- a/src/container/Navbar/Navbar.css
+++ b/src/container/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     align-items: center;
     flex-direction: row;
     background-color: #EDEDED;
-    padding: 1rem 7rem;
+    padding: 1rem 3rem;
     color:#171A1F;
     width:100%;
     position: fixed;
@@ -17,20 +17,20 @@
 }
 
 .app_Navbar-logo img{
-    width: 70px;
+    width: 4.4rem;
     padding: 0 1rem;
     cursor: pointer;
 }
 
 .app_Navbar-logo h1{
-    font-size: 30px;
+    font-size: 2rem;
     color: #171A1F;
     cursor: pointer;
 }
 
 .app_Navbar-link{
 display: flex;
-flex:0.85;
+flex:1;
 align-items: center;
 justify-content: center;
 list-style: none;
@@ -39,11 +39,12 @@ list-style: none;
 .app_Navbar-link a{
     text-decoration: none;
     color:#171A1F;
+    margin: 0 1rem;
 }
 
 .app_Navbar-link li{
-    font-size: 20px;
-    padding: 0 2rem;
+    font-size: 1.3rem;
+    margin: 0 1rem;
 }
 
 .app_Navbar-link a:hover{
@@ -55,7 +56,7 @@ color: gray;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-right: 5px;
+    margin-right: 5rem;
 }
 
 .app_Navbar-signup{
@@ -75,7 +76,7 @@ color: gray;
 }
 
 .app_Navbar-space{
-    padding: 0 1rem;
+    margin: 0 1rem;
 }
 
 .app_Navbar-login{
@@ -92,21 +93,41 @@ color: gray;
     animation: ease 0.5s;
     background-color: #308df7;
 }
+ 
 
-@media screen and (Max-width:1400px) {
-    .app_Navbar{
-    display:flex;
-    }
-}   
-
-@media screen and (Max-width:1300px) {
+@media screen and (Max-width:1250px) {
     .app_Navbar-link{
         display: none;
     }
 
-    .app_Navbar{
-        padding: 1rem 2rem;
+    .app_Navbar-logo{
+        margin-right: auto;
     }
 }
+
+@media screen and (Max-width:650px) {
+    .app_Navbar-link{
+        display: none;
+    }
+
+    .app_Navbar-logo{
+        margin-right: auto;
+    }
+
+    .app_Navbar-login{
+        height: 45px;
+        width: 80px;
+        border-radius: 40px;
+    }
+
+    .app_Navbar-signup{
+        height: 45px;
+        width: 80px;
+        border-radius: 40px;
+    }
+
+
+}
+
 
 
