--- a/src/container/Navbar/Navbar.css
+++ b/src/container/Navbar/Navbar.css
@@ -114,20 +114,13 @@ color: gray;
         margin-right: auto;
     }
 
-    .app_Navbar-login{
+    .app_Navbar-login,.app_Navbar-signup{
         height: 45px;
         width: 80px;
         border-radius: 40px;
     }
-
-    .app_Navbar-signup{
-        height: 45px;
-        width: 80px;
-        border-radius: 40px;
-    }
-
 
 }
-
+    
 
 
