--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -44,11 +44,6 @@
 @media screen and (max-width:650px) {
     .app_Footer{
         padding: 0;
-    }
-    .app_Footer-link a{
-        font-size: 15px;
-    }
-    .app_Footer-link li{
-        margin: 0.2rem 0;
+        display: none;
     }
 }
