--- a/src/container/Navbar/Navbar.css
+++ b/src/container/Navbar/Navbar.css
@@ -110,45 +110,42 @@ color: gray;
         display: none;
     }
 
-    .app_Navbar-logo{
-        margin-right: auto;
+    .app_Navbar-logo h1{
+        font-size: 2rem;
     }
 
-    .app_Navbar-login,.app_Navbar-signup{
-        height: 45px;
-        width: 80px;
-        border-radius: 40px;
-    }
-    .app_Navbar-logo h1{
-        font-size: 1.6rem;
+    .app_Navbar-logo {
+        display: flex;
+        align-items: center;
     }
 
     .app_Navbar-logo img{
-        width: 3.4rem;
-    }
-
-    .app_Navbar-space{
-        margin: 0 0.4rem;
-    }
-
-}
-
-@media screen and (Max-width:450px) {
-    
-    .app_Navbar-logo h1{
-        font-size: 1.6rem;
-    }
-
-    .app_Navbar-logo img{
-        width: 3.4rem;
+        width: 3rem;
+        height: 3rem;
     }
 
     .app_Navbar{
         padding: 1rem 2rem;
     }
+    .app_Navbar-login,.app_Navbar-signup{
+        height: 45px;
+        width: 80px;
+        border-radius: 40px;
+    }
+  .app_Navbar-space{
+        margin: 0 0.4rem;
+    }
+}
 
+@media screen and (Max-width:450px) {
+    
     .app_Navbar-space{
         margin: 0 0.2rem;
+    }
+
+    .app_Navbar-login,.app_Navbar-signup{
+        height: 45px;
+        width: 70px;
     }
 
 }
